# ProcessManager

./: CMakeLists.txt  CMakeLists.txt.user.49589c4  greeting.cpp  greeting.h  greeting.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.h  process.ui
